fix: fixes navbar stuck open

--- a/chrome/browser/nav-bar.css
+++ b/chrome/browser/nav-bar.css
@@ -149,9 +149,7 @@
                 #navigator-toolbox:hover,
                 #nav-bar-customization-target:hover,
                 #PanelUI-button:hover,
-                #nav-bar-customization-target *[open],
                 #urlbar:focus-within,
-                #urlbar:hover,
                 #urlbar[breakout][breakout-extend],
                 #nav-bar-overflow-button[open],
                 #nav-bar-overflow-button:hover
